Template de la pagina (sin nada)
eso

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<!--HOLA NICA HOLA JULI-->
-hola trolo
+<html>
+    <head>
+        <title>CMTV</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="language" content="es">
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <header></header>
+        <footer></footer>
+    </body>
+</html>
