header con navbar (incompleto)
agregué un header con las secciones, con hover en cada una y active para que marque la pagina en la que estas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header></header>
+        <header>
+            <section class="header-con-secciones">
+                <div class="seccion-header" id="boton-inicio">
+                    <button type="boton-header-active">INICIO</button>
+                </div>
+                <div class="seccion-header" id="boton-artistas">
+                    <button type="boton-header">ARTISTAS</button>
+                </div>
+                <div class="seccion-header" id="boton-noticias">
+                    <button type="boton-header">NOTICIAS</button>
+                </div>
+                <div class="seccion-header" id="boton-lanzamientos">
+                    <button type="boton-header">LANZAMIENTOS</button>
+                </div>
+                <div class="seccion-header" id="boton-inicio">
+                    <button type="boton-header">INICIO</button>
+                </div>
+                <div class="seccion-header" id="boton-videos">
+                    <button type="boton-header">VIDEOS</button>
+                </div>
+                <div class="seccion-header" id="boton-agenda">
+                    <button type="boton-header">AGENDA</button>
+                </div>
+                <div class="seccion-header" id="boton-extras">
+                    <button type="boton-header">EXTRAS</button>
+                </div>
+            </section>
+        </header>
         <footer></footer>
     </body>
 </html>
