--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="language" content="es">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fjalla+One&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -21,9 +25,6 @@
                 <div class="seccion-header" id="boton-lanzamientos">
                     <button type="boton-header">LANZAMIENTOS</button>
                 </div>
-                <div class="seccion-header" id="boton-inicio">
-                    <button type="boton-header">INICIO</button>
-                </div>
                 <div class="seccion-header" id="boton-videos">
                     <button type="boton-header">VIDEOS</button>
                 </div>
@@ -33,8 +34,48 @@
                 <div class="seccion-header" id="boton-extras">
                     <button type="boton-header">EXTRAS</button>
                 </div>
+                <form class="search-bar">
+                    <input type="text" placeholder="BUSCAR" name="search">
+                    <button type="submit"><img src="iconos/icono_buscador.svg"></button>
+                </form>
+            </section>
+            <section class="noticias-hover" id="id-noticias-hover">
+                <span class="titulo-hover">NOTICIAS</span>
+                <div class="flexcards-hover">
+                    <div class="card-hover">
+                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
+                        <span class="fecha-card-hover">??-mes-AÑOO</span>
+                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                    </div>
+                    <div class="card-hover">
+                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
+                        <span class="fecha-card-hover">??-mes-AÑOO</span>
+                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                    </div>
+                    <div class="card-hover">
+                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
+                        <span class="fecha-card-hover">??-mes-AÑOO</span>
+                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                    </div>
+                    <div class="card-hover">
+                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
+                        <span class="fecha-card-hover">??-mes-AÑOO</span>
+                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                    </div>
+                    <div class="card-hover">
+                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
+                        <span class="fecha-card-hover">??-mes-AÑOO</span>
+                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                    </div>
+                </div>
             </section>
         </header>
-        <footer></footer>
+        <footer>
+
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="scripts.js"></script>
     </body>
 </html>
