cambios en el header para que reflejen el figma
tambien eliminé los placeholders

--- a/index.html
+++ b/index.html
@@ -36,36 +36,36 @@
                 </div>
                 <form class="search-bar">
                     <input type="text" placeholder="BUSCAR" name="search">
-                    <button type="submit"><img src="iconos/icono_buscador.svg"></button>
+                    <button type="submit"><img src="iconos/icono-buscador.svg"></button>
                 </form>
             </section>
             <section class="noticias-hover" id="id-noticias-hover">
                 <span class="titulo-hover">NOTICIAS</span>
                 <div class="flexcards-hover">
                     <div class="card-hover">
-                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
-                        <span class="fecha-card-hover">??-mes-AÑOO</span>
-                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                        <img class="imagen-card-hover" src="/imagenes/inicio-noticias-latylam.png" alt="latylam-imagen">
+                        <span class="fecha-card-hover">14-jun-2024</span>
+                        <span class="titulo-card-hover">La T y La M y Pablo Lescano presentan un nuevo...</span>
                     </div>
                     <div class="card-hover">
-                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
-                        <span class="fecha-card-hover">??-mes-AÑOO</span>
-                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                        <img class="imagen-card-hover" src="/imagenes/inicio-noticias-amandapujo.png" alt="amandapujo-imagen">
+                        <span class="fecha-card-hover">11-jun-2024</span>
+                        <span class="titulo-card-hover">Amanda Pujó presenta su single y videoclip "Esperar"</span>
                     </div>
                     <div class="card-hover">
-                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
-                        <span class="fecha-card-hover">??-mes-AÑOO</span>
-                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                        <img class="imagen-card-hover" src="/imagenes/inicio-noticias-wos.png" alt="wos-imagen">
+                        <span class="fecha-card-hover">11-jun-2024</span>
+                        <span class="titulo-card-hover">Wos lanzó el video de la presentación en vivo de...</span>
                     </div>
                     <div class="card-hover">
-                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
-                        <span class="fecha-card-hover">??-mes-AÑOO</span>
-                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                        <img class="imagen-card-hover" src="/imagenes/inicio-noticias-camila.png" alt="camila-imagen">
+                        <span class="fecha-card-hover">10-jun-2024</span>
+                        <span class="titulo-card-hover">Así fue el show de Camila en Buenos Aires</span>
                     </div>
                     <div class="card-hover">
-                        <img class="imagen-card-hover" src="/imagenes/HARRY.jpg" alt="placeholder-imagen">
-                        <span class="fecha-card-hover">??-mes-AÑOO</span>
-                        <span class="titulo-card-hover">HELLO THERE MY NAME IS HARRY THE HAMSTER</span>
+                        <img class="imagen-card-hover" src="/imagenes/inicio-noticias-lostipitos.png" alt="lostipitos-imagen">
+                        <span class="fecha-card-hover">07-jun-2024</span>
+                        <span class="titulo-card-hover">Los Tipitos y Andrés Calamaro presentan nuevo...</span>
                     </div>
                 </div>
             </section>
