avances en la agenda del inicio
puto el que lo lea

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <section class="header-con-secciones">
+            <section class="header-con-secciones" id="header-section">
                 <div class="seccion-header" id="boton-inicio">
                     <button type="boton-header-active">INICIO</button>
                 </div>
@@ -70,6 +70,13 @@
                 </div>
             </section>
         </header>
+        <span class="titulo-agenda-inicio">AGENDA</span>
+        <section class="agenda-inicio">
+            <img class="imagengrande-agenda-inicio" src="/imagenes/inicio-agenda-100gecs.png" alt="100gecs-imagen">
+            <div class="degradeimagengrande-agenda-inicio"></div>
+            <span class="engira-agenda-inicio">DE GIRA AHORA</span>
+            <span class="loproximo-agenda-inicio">&nbsp;LO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PRÓXIMO</span>
+        </section>
         <footer>
 
         </footer>
