No sé jaja la ultiam version antes del rediseño
juju

--- a/index.html
+++ b/index.html
@@ -72,10 +72,35 @@
         </header>
         <span class="titulo-agenda-inicio">AGENDA</span>
         <section class="agenda-inicio">
-            <img class="imagengrande-agenda-inicio" src="/imagenes/inicio-agenda-100gecs.png" alt="100gecs-imagen">
+            <img class="imagengrande-agenda-inicio" src="/imagenes/inicio-agenda-miranda.jpg" alt="miranda-imagen">
             <div class="degradeimagengrande-agenda-inicio"></div>
             <span class="engira-agenda-inicio">DE GIRA AHORA</span>
             <span class="loproximo-agenda-inicio">&nbsp;LO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PRÓXIMO</span>
+            <div class="proximasgiras-agenda-inicio">
+                <div class="card-agenda-inicio">
+                    <img class="imagen-agenda-inicio" src="/imagenes/inicio-agenda-aurora.jpg" alt="aurora-imagen">
+                    <div class="textogira-agenda-inicio">
+                        <h1 class="fechagira-agenda-inicio">13/11</h1>
+                        <h2 class="ubicaciongira-agenda-inicio">Buenos Aires</h2>
+                    </div>
+                </div>
+                <hr>
+                <div class="card-agenda-inicio">
+                    <img class="imagen-agenda-inicio" src="/imagenes/inicio-agenda-bringmethehorizon.jpg" alt="bmth-imagen">
+                    <div class="textogira-agenda-inicio">
+                        <h1 class="fechagira-agenda-inicio">08/12</h1>
+                        <h2 class="ubicaciongira-agenda-inicio">Buenos Aires</h2>
+                    </div>
+                </div>
+                <hr>
+                <div class="card-agenda-inicio">
+                    <img class="imagen-agenda-inicio" src="/imagenes/inicio-agenda-descendentscirclejerks.jpg" alt="descendentscirclejerks-imagen">
+                    <div class="textogira-agenda-inicio">
+                        <h1 class="fechagira-agenda-inicio">11/12</h1>
+                        <h2 class="ubicaciongira-agenda-inicio">Buenos Aires</h2>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
 
