agregados ejemplos de artistas
falta darle funcionalidad y estilizar los botones

--- a/index.html
+++ b/index.html
@@ -43,14 +43,64 @@
                 <option value="ROCK">ROCK</option>
                 <option value="HIP-HOP">HIP-HOP</option>
                 <option value="POP">POP</option>
-                <div class="search-container">
-                    <input type="text" class="search-bar" placeholder="BUSCAR">
-                    <button class="search-button">
-                        <img src="iconos/icono-buscador.svg" alt="Buscar">
-                    </button>
-                </div>
             </select>
+                <input type="text" class="search-bar" placeholder="BUSCAR">
+                <button class="search-button">
+                    <img src="iconos/icono-buscador.svg" alt="Buscar">
+                </button>
         </section>
+        <span class="ultimos-artistas">ÚLTIMOS ARTISTAS BUSCADOS</span>
+        <div class="wrap-cards">
+            <div class="card-artista" id="primera">
+                <img src="imagenes/artistas-card-duki.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">DUKI</span>
+            </div>
+            <div class="card-artista" id="segunda">
+                <img src="imagenes/artistas-card-airbag.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">AIRBAG</span>
+            </div>
+            <div class="card-artista" id="tercera">
+                <img src="imagenes/artistas-card-camilosesto.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">CAMILO SESTO</span>
+            </div>
+        </div>
+        <div class="wrap-cards">
+            <div class="card-artista" id="primera">
+                <img src="imagenes/artistas-card-waltergiardino.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">WALTER GIARDINO</span>
+            </div>
+            <div class="card-artista" id="segunda">
+                <img src="imagenes/artistas-card-wos.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">WOS</span>
+            </div>
+            <div class="card-artista" id="tercera">
+                <img src="imagenes/artistas-card-elnegrotecla.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">EL NEGRO TECLA</span>
+            </div>
+        </div>
+        <div class="wrap-cards">
+            <div class="card-artista" id="primera">
+                <img src="imagenes/artistas-card-intoxicados.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">INTOXICADOS</span>
+            </div>
+            <div class="card-artista" id="segunda">
+                <img src="imagenes/artistas-card-márama.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">MÁRAMA</span>
+            </div>
+            <div class="card-artista" id="tercera">
+                <img src="imagenes/artistas-card-miranda!.png" class="card-artista-imagen">
+                <div class="card-artista-degrade"></div>
+                <span class="card-artista-nombre">MIRANDA!</span>
+            </div>
+        </div>
         <footer>
 
         </footer>
