--- a/paginas de artistas/duki.html
+++ b/paginas de artistas/duki.html
@@ -61,7 +61,7 @@
             </div>
         </section>
         <section class="perfil-musica">
-            <div class="sencillos active" id="sencillos-cards">
+            <div class="sencillos" id="sencillos-cards">
                 <div class="perfil-card-musica">
                     <div class="zona-seleccion"></div>
                     <span class="tipo-card-musica">SENCILLO</span>
@@ -80,84 +80,67 @@
                 </div>
                 <div class="perfil-card-musica">
                     <span class="tipo-card-musica">SENCILLO</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-sencillo-colaboraciones-NO SON KLLE.jpg">
-                    <span class="nombre-card-musica">NO SON KLLE<br>(2024)</span>
-                </div>
-            </div>
-            <div class="albumes" id="albumes-cards">
-                <div class="perfil-card-musica">
-                    <div class="zona-seleccion"></div>
-                    <span class="tipo-card-musica">ÁLBUM</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-album-antesdeameri.jpeg">
-                    <span class="nombre-card-musica">Antes de Ameri<br>(2023)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">ÁLBUM</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-album-desdeelfindelmundo.png">
-                    <span class="nombre-card-musica">Desde el Fin del Mundo<br>(2021)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">ÁLBUM</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-album-supersangrejoven.jpeg">
-                    <span class="nombre-card-musica">Súper Sangre Joven<br>(2019)</span>
-                </div>
-            </div>
-            <div class="EPs" id="eps-cards">
-                <div class="perfil-card-musica">
-                    <div class="zona-seleccion"></div>
-                    <span class="tipo-card-musica">EP</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-ep-temporadadereggaeton2.jpeg">
-                    <span class="nombre-card-musica">Temporada de Reggaeton 2<br>(2022)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">EP</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-ep-temporadadereggaeton.jpeg">
-                    <span class="nombre-card-musica">Temporada de Reggaeton<br>(2021)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">EP</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-ep-24.jpeg">
-                    <span class="nombre-card-musica">24<br>(2020)</span>
-                </div>
-            </div>
-            <div class="LPs" id="lps-cards">
-            </div>
-            <div class="envivo" id="envivo-cards">
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">EN VIVO</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-envivo-vivodesdeelfindelmundo.jpeg">
-                    <span class="nombre-card-musica">Vivo Desde el Fin del Mundo<br>(2021)</span>
-                </div>
-            </div>
-            <div class="colaboraciones" id="colaboraciones-cards">
-                <div class="perfil-card-musica">
-                    <div class="zona-seleccion"></div>
-                    <span class="tipo-card-musica">COLABORACION</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-sencillo-colaboraciones-tusilencio.jpeg">
-                    <span class="nombre-card-musica">Tu Silencio<br>(2024)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">COLABORACION</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-sencillo-colaboraciones-CEO.jpeg">
-                    <span class="nombre-card-musica">CEO<br>(2024)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">COLABORACION</span>
-                    <img class="imagen-card-musica" src="../imagenes/duki-sencillo-colaboraciones-Casablanca.jpeg">
-                    <span class="nombre-card-musica">Casablanca<br>(2024)</span>
-                </div>
-                <div class="perfil-card-musica">
-                    <span class="tipo-card-musica">COLABORACION</span>
                     <img class="imagen-card-musica" src="../imagenes/duki-sencillo-colaboraciones-NO SON KLLE.jpg">
                     <span class="nombre-card-musica">NO SON KLLE<br>(2024)</span>
                 </div>
             </div>
         </section>
-        <section class="parte-galeria">
-            <div class="titulo+tags">
-                <span class="titulo-galeria">GALERÍA</span>
-                <button class="tag-fotos">fotos</button>
-                <button class="tag-videos">videos</button>
+        <section class="videos-agenda">
+            <div class="preview-video-agenda">
+                <span class="titulo-videos">VIDEOS</span>
+                <img class="imagen-videos" src="../imagenes/duki-galeria-video.png">
+                <span class="nombre-videos">Curiosidades de DUKI - CMTV</span>
+                <img class="icono-videos" src="../iconos/icono-play.svg">
+            </div>
+        </section>
+        <section class="noticias-perfil">
+            <span class="titulo-noticias">NOTICIAS</span>
+            <div class="card-noticias">
+                <div class="fecha-artista-card">
+                    <span class="fecha-card-noticias">25 JUNIO</span>
+                    <span class="artista-card-noticias">DUKI</span>
+                </div>
+                <div class="titulo-parrafo-card">
+                    <span class="titulo-card-noticias">DUKI Y MKS LANZAN UN NUEVO SINGLE</span>
+                    <span class="parrafo-card-noticias">Los artistas presentan su nuevo single titulado “Tu silencio”, este nuevo lanzamiento marca un hito en el camino compartido por ambos, a través de los distintos momentos de su carrera</span>
+                </div>
+                <img class="imagen-card-noticias" src="../imagenes/duki-noticias-1.png">
+                <span class="leermas-card-noticias">LEER MÁS</span>
+            </div>
+            <div class="card-noticias">
+                <div class="fecha-artista-card">
+                    <span class="fecha-card-noticias">9 JUNIO</span>
+                    <span class="artista-card-noticias">DUKI</span>
+                </div>
+                <div class="titulo-parrafo-card">
+                    <span class="titulo-card-noticias">CONCIERTO HISTÓRICO DE DUKI EN EL BERNABEU</span>
+                    <span class="parrafo-card-noticias">Duki hizo historia al ser el primer músico argentino en brindar un concierto en el estadio del Real Madrid, y estuvo acompañado por Bizarrap, Emilia, Nicki Nicole, Jhayco, YSY A y Neo Pistea</span>
+                </div>
+                <img class="imagen-card-noticias" src="../imagenes/duki-noticias-2.png">
+                <span class="leermas-card-noticias">LEER MÁS</span>
+            </div>
+            <div class="card-noticias">
+                <div class="fecha-artista-card">
+                    <span class="fecha-card-noticias">25 SEPTIEMBRE</span>
+                    <span class="artista-card-noticias">DUKI</span>
+                </div>
+                <div class="titulo-parrafo-card">
+                    <span class="titulo-card-noticias">"TROYA" ES LO NUEVO DE DUKI</span>
+                    <span class="parrafo-card-noticias">El trapero argentino que se erige como uno de las figuras más importantes del género urbano en Argentina y Latinoamérica, lanza el último bonus track que le faltaba para completar su...</span>
+                </div>
+                <img class="imagen-card-noticias" src="../imagenes/duki-noticias-3.png">
+                <span class="leermas-card-noticias">LEER MÁS</span>
+            </div>
+            <span class="vertodas-noticias">ver todas...</span>
+        </section>
+        <section class="fotos-artista">
+            <span class="fotos-titulo">FOTOS</span>
+            <div class="flex-fotos-cards">
+                <div class="fotos-cards" id="primera-foto">
+                    <img class="imagen-foto-card" src="../imagenes/duki-galeria-foto1.png">
+                    <div class="degrade-foto-card"></div>
+                    <span class="descripcion-foto-card">Duki en vivo - Metropolitano (Rosario) - 28/04/23</span>
+                </div>
             </div>
         </section>
         <footer>
@@ -173,10 +156,6 @@
             </div>
             <span class="copyright">® 2024 - www.cmtv.com.ar. Todos los derechos reservados. </span>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="scripts.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </body>
 </html>
