--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
         <section class="artistas-searchbar">
             <span class="artistas-titulo">ARTISTAS</span>
-                <input type="text" class="search-bar" id="Search" placeholder="BUSCAR">
+                <input type="text" class="search-bar" id="Search" placeholder="Buscar en sección">
                 <button class="search-button">
                     <img src="iconos/icono-buscador.svg" alt="Buscar">
                 </button>
